1.Public and UGC admin FAQ implemented.Though Update and Delete operation was left undone 2. UGC dashboard correction 3. View related corrections

--- a/resources/views/_layouts/header.ejs
+++ b/resources/views/_layouts/header.ejs
@@ -3,9 +3,9 @@
     <a href="/" class="logo"><i class="fas fa-link"></i>UniChain</a>
 
     <nav class="navbar">
-        <a class="active" href="/">Home</a>
+        <a class="active" href="/global-redirect">Home</a>
         <a href="/about">About</a>
-        <a href="#">FAQ</a>
+        <a href="/ugc/public/faq">FAQ</a>
     </nav> 
 
     <div class="icons">  
