--- a/resources/views/students/postQrScan.ejs
+++ b/resources/views/students/postQrScan.ejs
@@ -142,7 +142,7 @@
         </section>
   </section>
 
-<!-- Certificate Section Start -->
+<!-- Certificate QR Section Start -->
 <section class="home-content mr-100">
     <h1 class="heading"> Certificate QR Code </h1>
     <canvas id="qr" ></canvas>
