--- a/resources/views/universities/checker/dashboard.ejs
+++ b/resources/views/universities/checker/dashboard.ejs
@@ -2,7 +2,7 @@
       <div class="overview-boxes">
         <div class="box">
           <div class="right-side">
-            <a href="/university/certificate/table" class="box-topic">Validate Certificate</a>
+            <a href="/university/certificate-filter/display" class="box-topic">Filter Certificate</a>
           </div>
         </div>
 
@@ -13,7 +13,7 @@
           </div>
         </div>
       </div>
-
+      
       <div class="table-wrapper">
         <div class="new-table w-full mx-auto table-certificate">
           
