1. Certificate delete activated in Maker approved list 2. Mailing to personal email when checker verifies is restored

--- a/resources/views/universities/certificate/readOnly.ejs
+++ b/resources/views/universities/certificate/readOnly.ejs
@@ -2,7 +2,7 @@
 <section class="home-content py-20">
     <section class="ml-20 certificate_container py-20">
   
-            <h1 class="heading mb-10"> Welcome to UGC Instant Certificate Verification </h1>
+            <h1 class="heading mb-10"> Certificate Found !! </h1>
         
             <form id="read_form">
                 <div class="row">
