--- a/resources/views/ugc/university/approved.ejs
+++ b/resources/views/ugc/university/approved.ejs
@@ -122,7 +122,7 @@
                 <%= account.inVerified %>  
             </div>
              <div class="cell" data-title="Authentication Date">
-                <%= moment(account.updatedAt).format('DD:MM:YYYY') %>  
+                <%= moment(account.updatedAt).format('DD/MM/YYYY') %>  
             </div>
         </div> 
         <% }) %>
