Hotfixing registration errors

--- a/resources/views/universities/students/approval.ejs
+++ b/resources/views/universities/students/approval.ejs
@@ -49,7 +49,7 @@
           <%= account.lastName %>
        </div>
        <div class="cell" data-title="Date of Birth">
-          <%= moment(account.dob).format('DD:MM:YYYY') %>
+          <%= moment(account.dob).format('DD/MM/YYYY') %>
        </div>
        <div class="cell" data-title="University Name">
           <%= account.uniName %>
